--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 
 <head>
     <meta charset="UTF-8">
@@ -16,26 +16,25 @@
     <div class="flex justify-between items-center border-b border-gray-200 p-4 px-6 bg-white">
         <!-- Left: Hello, Bean -->
         <div class="flex items-center space-x-3">
-            <img src="../../豆兒/S__200753260.jpg" alt="User Avatar" class="rounded-full w-10 h-10">
+            <img src="./image/self.jpg" alt="Avatar" class="rounded-full w-10 h-10">
             <span class="text-gray-700 font-medium">Hello, Bean</span>
         </div>
 
         <!-- Center: Pomodoro -->
         <div class="absolute left-1/2 transform -translate-x-1/2 text-lg text-gray-600">
-            ⏱️ Pomodoro
+            <a href="./pomodoro.html">⏱️ Pomodoro</a>
         </div>
 
         <!-- Right: Video + Gear -->
-        <div class="flex items-center space-x-4 ml-auto">
-
-            <button class="text-gray-600 hover:text-gray-800">
-                <!-- Gear icon -->
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M12 8c-1.104 0-2 .896-2 2s.896 2 2 2 2-.896 2-2-.896-2-2-2zm7.68 4.308a7.953 7.953 0 000-2.616l2.073-1.605-2.036-3.522-2.482 1.106a8.037 8.037 0 00-2.27-1.311L14 3h-4l-.964 2.35a8.037 8.037 0 00-2.27 1.311l-2.482-1.106-2.036 3.522 2.073 1.605a7.953 7.953 0 000 2.616l-2.073 1.605 2.036 3.522 2.482-1.106a8.037 8.037 0 002.27 1.311L10 21h4l.964-2.35a8.037 8.037 0 002.27-1.311l2.482 1.106 2.036-3.522-2.073-1.605z" />
-                </svg>
-            </button>
-        </div>
+        <button class="w-10 h-10 rounded-full bg-white flex items-center justify-center shadow-sm">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-600" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+            </svg>
+        </button>
     </div>
 
     <!-- 🔹Main Body -->
@@ -50,7 +49,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
                     </svg>
-                    <span class="text-sm">Today's Work</span>
+                    <span class="text-sm">General</span>
                 </li>
                 <li class="sidebar-item active p-2 flex items-center bg-white rounded hover:bg-gray-100">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -59,7 +58,25 @@
                             d="m20.25 7.5-.625 10.632a2.25 2.25 0 0 1-2.247 2.118H6.622a2.25 2.25 0 0 1-2.247-2.118L3.75 7.5M10 11.25h4M3.375 7.5h17.25c.621 0 1.125-.504 1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125Z" />
                     </svg>
 
-                    <span class="text-sm">By Date</span>
+                    <span class="text-sm">Work</span>
+                </li>
+                <li class="sidebar-item active p-2 flex items-center bg-white rounded hover:bg-gray-100">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-4 h-4 mr-2 text-gray-600">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="m20.25 7.5-.625 10.632a2.25 2.25 0 0 1-2.247 2.118H6.622a2.25 2.25 0 0 1-2.247-2.118L3.75 7.5M10 11.25h4M3.375 7.5h17.25c.621 0 1.125-.504 1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125Z" />
+                    </svg>
+
+                    <span class="text-sm">Personal</span>
+                <li class="sidebar-item active p-2 flex items-center bg-white rounded hover:bg-gray-100">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-4 h-4 mr-2 text-gray-600">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="m20.25 7.5-.625 10.632a2.25 2.25 0 0 1-2.247 2.118H6.622a2.25 2.25 0 0 1-2.247-2.118L3.75 7.5M10 11.25h4M3.375 7.5h17.25c.621 0 1.125-.504 1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125Z" />
+                    </svg>
+
+                    <span class="text-sm">Study</span>
+                </li>
                 </li>
                 <!-- more folders... -->
             </ul>
@@ -97,20 +114,27 @@
                             class="bg-gray-100 text-gray-600 px-3 py-1 rounded-md text-sm">Add</button>
 
                     </div>
+                    <div class="mt-2"> <!-- 新增分類下拉選單 -->
+                        <select id="categorySelect" class="border rounded p-1 text-sm">
+                            <option value="general">General</option>
+                            <option value="work">Work</option>
+                            <option value="personal">Personal</option>
+                            <option value="study">Study</option>
+                        </select>
+                    </div>
                 </div>
 
                 <!-- Task Categories -->
                 <div class="flex space-x-2 mb-6">
                     <button class="bg-gray-200 text-gray-800 px-4 py-1 rounded-full text-sm">All</button>
-                    <button
-                        class="bg-white border border-gray-200 text-gray-600 px-4 py-1 rounded-full text-sm">Today</button>
+
                     <button
                         class="bg-white border border-gray-200 text-gray-600 px-4 py-1 rounded-full text-sm">Completed</button>
                 </div>
 
                 <!-- Task List -->
                 <div id="taskList" class="space-y-3">
-                  
+
                 </div>
             </div>
         </div>
