修改上方目錄的樣式

--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
                 </div>
 
                 <!-- Task Categories -->
-                <div class="flex space-x-2 mb-6">
-                    <button class="bg-gray-200 text-gray-800 px-4 py-1 rounded-full text-sm">All</button>
-
-                    <button
-                        class="bg-white border border-gray-200 text-gray-600 px-4 py-1 rounded-full text-sm">Completed</button>
+                <div class="category-btn button">
+                    <button class="btn-all active">All</button>
+                    <button class="btn-completed">Completed</button>
                 </div>
+
+
 
                 <!-- Task List -->
                 <div id="taskList" class="space-y-3">
