--- a/index.html
+++ b/index.html
@@ -126,14 +126,32 @@
                 <div class="category-btn button">
                     <button class="btn-all active">All</button>
                     <button class="btn-completed">Completed</button>
+                    <button class="clearCompletedBtn">Delete All Completed</button>
                 </div>
-
 
 
                 <!-- Task List -->
                 <div id="taskList" class="space-y-3">
-
                 </div>
+
+                <!-- 按刪除的確認提示 Modal -->
+                <div id="deleteModal"
+                    class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
+                    <div class="bg-white rounded-lg shadow-lg p-6 w-80">
+                        <h2 class="text-lg font-semibold text-gray-800 mb-4">刪除任務</h2>
+                        <p class="text-sm text-gray-600 mb-6">確定要刪除這個任務嗎？此動作無法復原。</p>
+                        <div class="flex justify-end space-x-3">
+                            <button id="cancelDelete" class="px-4 py-2 text-sm rounded bg-gray-200 hover:bg-gray-300">
+                                取消
+                            </button>
+                            <button id="confirmDelete"
+                                class="px-4 py-2 text-sm rounded bg-red-500 text-white hover:bg-red-600">
+                                確定刪除
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
